# mpi_helper

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp  test_input
test/: CMakeLists.txt  test.cpp
